# aola-nuannuan

./: .gitignore  CMakeLists.txt  README.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/aola/dressup/: AolaDressUpActivity.java  HttpHelper.java
android/app/src/main/java/com/aola/nuannuan/: AolaNuanNuanActivity.java  HttpHelper.java
android/app/src/main/jni/: CMakeLists.txt  android_platform.cpp  android_platform.h  setup_deps.sh
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: file_paths.xml
cmake/: toolchain-mingw64.cmake
data/: clothesdata.json  clothespartdata.json
scripts/: Dockerfile.windows  build_windows.sh  build_windows_native.bat  make_macos_portable.sh  make_windows_portable.sh
src/: AvatarRenderer.cpp  AvatarRenderer.h  ClothDefine.h  ConfigLoader.cpp  ConfigLoader.h  Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  main.cpp
